[gd_scene load_steps=29 format=3 uid="uid://b407s22d668gn"]

[ext_resource type="Script" uid="uid://cp25ut6d1fvyy" path="res://scripts/Setting/Setting.gd" id="1_u58eq"]
[ext_resource type="Texture2D" uid="uid://dxafe3273evjp" path="res://sprites/Setting_Screen/pixil-frame-0 (5).png" id="2_7k1fe"]
[ext_resource type="Texture2D" uid="uid://co5tsve54ijyn" path="res://sprites/Home_Screen/Setting.png" id="3_7k1fe"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_31ui4"]
content_margin_left = 100.0
content_margin_top = 24.0
content_margin_bottom = 24.0
draw_center = false

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_scrng"]
bg_color = Color(0.29803923, 0.29803923, 0.29803923, 0.5058824)
corner_radius_top_left = 35
corner_radius_top_right = 35
corner_radius_bottom_right = 35
corner_radius_bottom_left = 35

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7k1fe"]
content_margin_left = 8.0
content_margin_top = 8.0
content_margin_right = 8.0
content_margin_bottom = 8.0
corner_radius_top_left = 35
corner_radius_top_right = 35
corner_radius_bottom_right = 35
corner_radius_bottom_left = 35

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_u58eq"]
content_margin_left = 4.0
content_margin_top = 4.0
content_margin_right = 4.0
content_margin_bottom = 4.0
corner_radius_top_left = 35
corner_radius_top_right = 35
corner_radius_bottom_right = 35
corner_radius_bottom_left = 35

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hjk27"]
draw_center = false

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_sj267"]
content_margin_left = 15.0
bg_color = Color(0.6, 0.6, 0.6, 0.29803923)
corner_radius_top_left = 16
corner_radius_bottom_left = 16

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_be801"]
content_margin_left = 15.0
bg_color = Color(0.6, 0.6, 0.6, 0.29803923)
corner_radius_top_left = 16
corner_radius_bottom_left = 16

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_o8tsb"]
content_margin_left = 15.0
bg_color = Color(0.6, 0.6, 0.6, 0.14509805)
corner_radius_top_left = 16
corner_radius_bottom_left = 16

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1s23a"]
content_margin_left = 25.0
bg_color = Color(0.6, 0.6, 0.6, 0.53333336)
corner_radius_top_left = 16
corner_radius_bottom_left = 16

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_k45vp"]
content_margin_left = 15.0
bg_color = Color(0.6, 0.6, 0.6, 0.29803923)
corner_radius_top_left = 16
corner_radius_bottom_left = 16

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_adqxb"]
content_margin_left = 15.0
bg_color = Color(0.6, 0.6, 0.6, 0.29803923)
corner_radius_top_left = 16
corner_radius_bottom_left = 16

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ikx14"]
content_margin_left = 15.0
bg_color = Color(0.6, 0.6, 0.6, 0.14509805)
corner_radius_top_left = 16
corner_radius_bottom_left = 16

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_masab"]
content_margin_left = 25.0
bg_color = Color(0.6, 0.6, 0.6, 0.53333336)
corner_radius_top_left = 16
corner_radius_bottom_left = 16

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_yrx87"]
content_margin_left = 15.0
bg_color = Color(0.6, 0.6, 0.6, 0.29803923)
corner_radius_top_left = 16
corner_radius_bottom_left = 16

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jnidh"]
content_margin_left = 15.0
bg_color = Color(0.6, 0.6, 0.6, 0.29803923)
corner_radius_top_left = 16
corner_radius_bottom_left = 16

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_50131"]
content_margin_left = 15.0
bg_color = Color(0.6, 0.6, 0.6, 0.14509805)
corner_radius_top_left = 16
corner_radius_bottom_left = 16

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gdp5f"]
content_margin_left = 25.0
bg_color = Color(0.6, 0.6, 0.6, 0.53333336)
corner_radius_top_left = 16
corner_radius_bottom_left = 16

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_admcc"]
content_margin_left = 15.0
bg_color = Color(0.6, 0.6, 0.6, 0.29803923)
corner_radius_top_left = 16
corner_radius_bottom_left = 16

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kytot"]
content_margin_left = 15.0
bg_color = Color(0.6, 0.6, 0.6, 0.29803923)
corner_radius_top_left = 16
corner_radius_bottom_left = 16

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rawaq"]
content_margin_left = 15.0
bg_color = Color(0.6, 0.6, 0.6, 0.14509805)
corner_radius_top_left = 16
corner_radius_bottom_left = 16

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fextp"]
content_margin_left = 25.0
bg_color = Color(0.6, 0.6, 0.6, 0.53333336)
corner_radius_top_left = 16
corner_radius_bottom_left = 16

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_s2h46"]
content_margin_left = 15.0
bg_color = Color(0.6, 0.6, 0.6, 0.29803923)
corner_radius_top_left = 16
corner_radius_bottom_left = 16

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3o1ji"]
content_margin_left = 15.0
bg_color = Color(0.6, 0.6, 0.6, 0.29803923)
corner_radius_top_left = 16
corner_radius_bottom_left = 16

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8iqn7"]
content_margin_left = 15.0
bg_color = Color(0.6, 0.6, 0.6, 0.14509805)
corner_radius_top_left = 16
corner_radius_bottom_left = 16

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bqguh"]
content_margin_left = 25.0
bg_color = Color(0.6, 0.6, 0.6, 0.53333336)
border_color = Color(1, 1, 1, 1)
border_blend = true
corner_radius_top_left = 16
corner_radius_bottom_left = 16

[node name="Setting" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_u58eq")

[node name="Panel3" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 124.0
grow_horizontal = 2

[node name="Setting_label" type="Label" parent="Panel3"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -51.5
offset_right = 459.0
offset_bottom = 51.5
grow_vertical = 2
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxFlat_31ui4")
text = "Setting / Controls"

[node name="Back button" type="Button" parent="Panel3"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -102.0
offset_top = -35.0
offset_right = -32.0
offset_bottom = 35.0
grow_horizontal = 0
grow_vertical = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_scrng")
theme_override_styles/pressed = SubResource("StyleBoxFlat_7k1fe")
theme_override_styles/hover = SubResource("StyleBoxFlat_u58eq")
icon = ExtResource("2_7k1fe")
expand_icon = true

[node name="Setting_icon" type="Sprite2D" parent="Panel3"]
position = Vector2(52, 63)
texture = ExtResource("3_7k1fe")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_top = 124.0
offset_right = 314.0
grow_vertical = 2

[node name="VBoxContainer" type="ItemList" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 43.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_hjk27")

[node name="Control_button" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 0
offset_right = 261.0
offset_bottom = 42.0
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = SubResource("StyleBoxFlat_sj267")
theme_override_styles/pressed = SubResource("StyleBoxFlat_be801")
theme_override_styles/hover = SubResource("StyleBoxFlat_o8tsb")
theme_override_styles/focus = SubResource("StyleBoxFlat_1s23a")
text = "Controls"
alignment = 0

[node name="Graphic_button" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 0
offset_top = 70.0
offset_right = 261.0
offset_bottom = 112.0
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = SubResource("StyleBoxFlat_k45vp")
theme_override_styles/pressed = SubResource("StyleBoxFlat_adqxb")
theme_override_styles/hover = SubResource("StyleBoxFlat_ikx14")
theme_override_styles/focus = SubResource("StyleBoxFlat_masab")
text = "Graphic"
alignment = 0

[node name="Audio_button" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 0
offset_top = 140.0
offset_right = 261.0
offset_bottom = 182.0
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = SubResource("StyleBoxFlat_yrx87")
theme_override_styles/pressed = SubResource("StyleBoxFlat_jnidh")
theme_override_styles/hover = SubResource("StyleBoxFlat_50131")
theme_override_styles/focus = SubResource("StyleBoxFlat_gdp5f")
text = "Audio"
alignment = 0

[node name="Account_button" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 0
offset_top = 210.0
offset_right = 261.0
offset_bottom = 252.0
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = SubResource("StyleBoxFlat_admcc")
theme_override_styles/pressed = SubResource("StyleBoxFlat_kytot")
theme_override_styles/hover = SubResource("StyleBoxFlat_rawaq")
theme_override_styles/focus = SubResource("StyleBoxFlat_fextp")
text = "Account"
alignment = 0

[node name="Key_Bind_button" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 0
offset_top = 280.0
offset_right = 261.0
offset_bottom = 322.0
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = SubResource("StyleBoxFlat_s2h46")
theme_override_styles/pressed = SubResource("StyleBoxFlat_3o1ji")
theme_override_styles/hover = SubResource("StyleBoxFlat_8iqn7")
theme_override_styles/focus = SubResource("StyleBoxFlat_bqguh")
text = "Key Bindings"
alignment = 0

[node name="Panel2" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -1606.0
offset_top = 124.0
grow_horizontal = 0
grow_vertical = 2

[node name="Control_container" type="ItemList" parent="Panel2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="Panel2/Control_container"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
text = "Control container"

[node name="Graphic_container" type="ItemList" parent="Panel2"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="Panel2/Graphic_container"]
layout_mode = 0
offset_right = 1606.0
offset_bottom = 23.0
text = "Graphic container"

[node name="Audio_Container" type="ItemList" parent="Panel2"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="Panel2/Audio_Container"]
layout_mode = 0
offset_right = 1606.0
offset_bottom = 23.0
text = "Audio Container"

[node name="Account_Container" type="ItemList" parent="Panel2"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="Panel2/Account_Container"]
layout_mode = 0
offset_right = 1606.0
offset_bottom = 23.0
text = "Account Container"

[node name="Key_Bind_Container" type="ItemList" parent="Panel2"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="Panel2/Key_Bind_Container"]
layout_mode = 0
offset_right = 1606.0
offset_bottom = 23.0
text = "Key Binding Container"

[connection signal="pressed" from="Panel3/Back button" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/Control_button" to="." method="_on_control_button_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/Graphic_button" to="." method="_on_graphic_button_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/Audio_button" to="." method="_on_audio_button_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/Account_button" to="." method="_on_account_button_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/Key_Bind_button" to="." method="_on_key_bind_button_pressed"]
